<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignupActivity">

<!--    <android.support.design.widget.TextInputLayout></android.support.design.widget.TextInputLayout>-->

    <EditText
        android:id="@+id/editTextSignupFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/firstName"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTextSignupLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/lastName"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTextSignupEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/text_email"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTextSignupPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:ems="10"
        android:hint="@string/signup_pass"
        android:inputType="textPassword"
        android:minHeight="48dp"/>

    <EditText
        android:id="@+id/editTextSignupAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/age"
        android:inputType="number"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTextSignupCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/country"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTextSignupHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/height"
        android:inputType="number"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTextSignupWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/weight"
        android:inputType="number"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/text_pass_length"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/pass_length"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/text_terms_use"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/agreement_terms_of_use"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_confidentiality_policy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:text="@string/agreement_confidentiality_policy"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button_login_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="200dp"
        android:layout_marginRight="20dp"
        android:height="60dp"
        android:backgroundTint="@color/light_gray"
        android:defaultFocusHighlightEnabled="false"
        android:gravity="center_horizontal|center_vertical"
        android:onClick="register"
        android:text="@string/signup"
        android:textAllCaps="false" />
</LinearLayout>