<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_accueil">

    <fragment
        android:id="@+id/navigation_accueil"
        android:name="fr.android.bottomnav.ui.accueil.AccueilFragment"
        android:label="@string/title_accueil"
        tools:layout="@layout/fragment_accueil" />


    <fragment
        android:id="@+id/navigation_enregistrer"
        android:name="fr.android.bottomnav.ui.enregistrer.MapsFragment"
        android:label="@string/title_enregistrer"
        tools:layout="@layout/fragment_maps" />


    <fragment
        android:id="@+id/navigation_entrainements"
        android:name="fr.android.bottomnav.ui.entrainements.EntrainementsFragment"
        android:label="@string/title_entrainements"
        tools:layout="@layout/fragment_entrainements" />

    <fragment
        android:id="@+id/navigation_localiser"
        android:name="fr.android.bottomnav.ui.localiser.LocaliserFragment"
        android:label="@string/title_localiser"
        tools:layout="@layout/fragment_localiser" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="fr.android.bottomnav.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>